--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "axios": "^1.1.3"
+    "axios": "^1.1.3",
+    "movie-trailer": "^2.1.0",
+    "react-youtube": "^10.0.0"
   }
 }
